<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linear_layout" >

    <RelativeLayout style="@style/app_top_rela_bg" >

        <Button
            android:id="@+id/btn_sr_back"
            style="@style/app_top_btn_back" />

        <TextView
            style="@style/app_top_tv_title"
            android:text="@string/str_sr_top_title" />
    </RelativeLayout>

    <LinearLayout style="@style/linear_padding8" >

        <EditText
            android:id="@+id/et_sr_username"
            style="@style/et_bg_input"
            android:hint="@string/str_sr_username"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout style="@style/linear_padding8" >

        <EditText
            android:id="@+id/et_sr_password"
            style="@style/et_bg_input"
            android:hint="@string/str_sr_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/linear_padding8" >

        <EditText
            android:id="@+id/et_sr_confirm_password"
            style="@style/et_bg_input"
            android:hint="@string/str_sr_confirm_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_padding8"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_sr_agree"
            style="@style/cb_checkbox"
            android:text="@string/str_sr_agree" />

        <TextView
            android:id="@+id/tv_sr_protocol"
            style="@style/tv_link"
            android:layout_marginLeft="5dp"
            android:text="@string/str_sr_protocol" />
    </LinearLayout>

    <LinearLayout style="@style/linear_padding8" >

        <Button
            android:id="@+id/btn_sr_register"
            style="@style/btn_bg_red"
            android:layout_width="match_parent"
            android:text="@string/str_sr_register" />
    </LinearLayout>

</LinearLayout>