<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linear_layout" >

    <RelativeLayout style="@style/app_top_rela_bg" >

        <Button
            android:id="@+id/btn_uad_back"
            style="@style/app_top_btn_back" />

        <TextView
            style="@style/app_top_tv_title"
            android:text="@string/str_uad_top_title" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_uad_layout"
        style="@style/linear_padding8" >

        <LinearLayout style="@style/linear_left_right" >

            <TextView
                style="@style/tv_left"
                android:text="@string/str_uad_contact_person" />

            <TextView
                android:id="@+id/et_uad_contact_person"
                style="@style/tv_match" />
        </LinearLayout>

        <LinearLayout style="@style/linear_left_right" >

            <TextView
                style="@style/tv_left"
                android:text="@string/str_uad_contact_no" />

            <TextView
                android:id="@+id/et_uad_contact_no"
                style="@style/tv_match" />
        </LinearLayout>

        <LinearLayout style="@style/linear_left_right" >

            <TextView
                style="@style/tv_left"
                android:text="@string/str_uad_address" />

            <TextView
                android:id="@+id/et_uad_address"
                style="@style/tv_match" />
        </LinearLayout>

        <LinearLayout style="@style/linear_left_right" >

            <TextView
                style="@style/tv_left"
                android:text="@string/str_uad_postcode" />

            <TextView
                android:id="@+id/et_uad_postcode"
                style="@style/tv_match" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>