<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" >
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" >
        </TabWidget>

        <RadioGroup
            android:id="@+id/app_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_tab_bar"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_menu_home"
                style="@style/rb_menu_btn"
                android:checked="true"
                android:drawableTop="@drawable/menu_home"
                android:text="@string/str_main_home" />

            <RadioButton
                android:id="@+id/radio_menu_side"
                style="@style/rb_menu_btn"
                android:drawableTop="@drawable/menu_side"
                android:text="@string/str_main_side" />

            <RadioButton
                android:id="@+id/radio_menu_im"
                style="@style/rb_menu_btn"
                android:drawableTop="@drawable/menu_im"
                android:text="@string/str_main_im" />

            <RadioButton
                android:id="@+id/radio_menu_cart"
                style="@style/rb_menu_btn"
                android:drawableTop="@drawable/menu_spcart"
                android:text="@string/str_main_cart" />

            <RadioButton
                android:id="@+id/radio_menu_account"
                style="@style/rb_menu_btn"
                android:drawableTop="@drawable/menu_account"
                android:text="@string/str_main_account" />
        </RadioGroup>
    </LinearLayout>

</TabHost>