<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linear_layout" >

    <RelativeLayout style="@style/app_top_rela_bg" >

        <Button
            android:id="@+id/btn_spom_back"
            style="@style/app_top_btn_back" />

        <TextView
            style="@style/app_top_tv_title"
            android:text="@string/str_spom_top_title" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_background"
        android:padding="5dp" >

        <RelativeLayout
            android:id="@+id/rela_spom_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/btn_spom_product"
                style="@style/btn_tab_left"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/str_common_product" />

            <Button
                android:id="@+id/btn_spom_marchant"
                style="@style/btn_tab_right"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_spom_product"
                android:text="@string/str_common_merchant" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/rela_spom_type" >

            <EditText
                android:id="@+id/et_spom_searchkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_search_input"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize_14" />

            <Button
                android:id="@+id/btn_spom_search"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:background="@null" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>